--- a/Cravings/app/build.gradle
+++ b/Cravings/app/build.gradle
@@ -22,8 +22,13 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.android.gms:play-services:7.8.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.1.1'
 }
