added event activity that loads on event click

--- a/Cravings/app/src/main/AndroidManifest.xml
+++ b/Cravings/app/src/main/AndroidManifest.xml
@@ -59,6 +59,14 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <activity
+            android:name=".EventActivity"
+            android:label="@string/title_activity_event_activitiy"
+            android:parentActivityName=".MainFeedActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cravingscravings.cravings.MainFeedActivity" />
+        </activity>
     </application>
 
 </manifest>
